--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -409,6 +409,7 @@
   "block.beemancer.honeyed_fence": "Honeyed Fence",
   "block.beemancer.honeyed_fence_gate": "Honeyed Fence Gate",
   "block.beemancer.honeyed_trapdoor": "Honeyed Trapdoor",
+  "block.beemancer.honeyed_door": "Honeyed Door",
   "block.beemancer.honeyed_stone_wall": "Honeyed Stone Wall",
   "block.beemancer.honeyed_glass": "Honeyed Glass",
   "block.beemancer.honeyed_glass_pane": "Honeyed Glass Pane",
@@ -418,6 +419,7 @@
   "block.beemancer.royal_fence": "Royal Fence",
   "block.beemancer.royal_fence_gate": "Royal Fence Gate",
   "block.beemancer.royal_trapdoor": "Royal Trapdoor",
+  "block.beemancer.royal_door": "Royal Door",
   "block.beemancer.royal_stone": "Royal Stone",
   "block.beemancer.royal_stone_stair": "Royal Stone Stairs",
   "block.beemancer.royal_stone_slab": "Royal Stone Slab",
@@ -428,6 +430,7 @@
   "block.beemancer.nectar_fence": "Nectar Fence",
   "block.beemancer.nectar_fence_gate": "Nectar Fence Gate",
   "block.beemancer.nectar_trapdoor": "Nectar Trapdoor",
+  "block.beemancer.nectar_door": "Nectar Door",
   "block.beemancer.nectar_stone": "Nectar Stone",
   "block.beemancer.nectar_stone_stair": "Nectar Stone Stairs",
   "block.beemancer.nectar_stone_slab": "Nectar Stone Slab",
