--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -408,6 +408,7 @@
   "block.beemancer.honeyed_fence": "Barrière Miellée",
   "block.beemancer.honeyed_fence_gate": "Portillon Miellé",
   "block.beemancer.honeyed_trapdoor": "Trappe Miellée",
+  "block.beemancer.honeyed_door": "Porte Miellée",
   "block.beemancer.honeyed_stone_wall": "Muret en Pierre Miellée",
   "block.beemancer.honeyed_glass": "Verre Miellé",
   "block.beemancer.honeyed_glass_pane": "Vitre Miellée",
@@ -417,6 +418,7 @@
   "block.beemancer.royal_fence": "Barrière Royale",
   "block.beemancer.royal_fence_gate": "Portillon Royal",
   "block.beemancer.royal_trapdoor": "Trappe Royale",
+  "block.beemancer.royal_door": "Porte Royale",
   "block.beemancer.royal_stone": "Pierre Royale",
   "block.beemancer.royal_stone_stair": "Escalier en Pierre Royale",
   "block.beemancer.royal_stone_slab": "Dalle en Pierre Royale",
@@ -427,6 +429,7 @@
   "block.beemancer.nectar_fence": "Barrière de Nectar",
   "block.beemancer.nectar_fence_gate": "Portillon de Nectar",
   "block.beemancer.nectar_trapdoor": "Trappe de Nectar",
+  "block.beemancer.nectar_door": "Porte de Nectar",
   "block.beemancer.nectar_stone": "Pierre de Nectar",
   "block.beemancer.nectar_stone_stair": "Escalier en Pierre de Nectar",
   "block.beemancer.nectar_stone_slab": "Dalle en Pierre de Nectar",
