--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -435,6 +435,11 @@
   "block.beemancer.nectar_stone_stair": "Nectar Stone Stairs",
   "block.beemancer.nectar_stone_slab": "Nectar Stone Slab",
   "block.beemancer.nectar_stone_wall": "Nectar Stone Wall",
+  "item.beemancer.honeyed_iron": "Honeyed Iron",
+  "item.beemancer.royal_crystal": "Royal Crystal",
+  "item.beemancer.royal_gold": "Royal Gold",
+  "item.beemancer.nectar_diamond": "Nectar Diamond",
+  "item.beemancer.nectar_crystal": "Nectar Crystal",
   "block.beemancer.honey_reservoir": "Honey Reservoir",
   "block.beemancer.altar_heart": "Altar Heart",
   "block.beemancer.hive_multiblock": "Hive Block",
