--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -434,6 +434,11 @@
   "block.beemancer.nectar_stone_stair": "Escalier en Pierre de Nectar",
   "block.beemancer.nectar_stone_slab": "Dalle en Pierre de Nectar",
   "block.beemancer.nectar_stone_wall": "Muret en Pierre de Nectar",
+  "item.beemancer.honeyed_iron": "Fer Miellé",
+  "item.beemancer.royal_crystal": "Cristal Royal",
+  "item.beemancer.royal_gold": "Or Royal",
+  "item.beemancer.nectar_diamond": "Diamant de Nectar",
+  "item.beemancer.nectar_crystal": "Cristal de Nectar",
   "block.beemancer.honey_reservoir": "Réservoir de Miel",
   "block.beemancer.altar_heart": "Coeur de l'Autel",
   "block.beemancer.hive_multiblock": "Bloc de Ruche",
