fix comb product

--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -155,6 +155,13 @@
   "item.beemancer.netherite_scrap_dust": "Netherite Scrap Dust",
   "item.beemancer.dragon_breath_dust": "Dragon Breath Dust",
   "item.beemancer.nether_star_dust": "Nether Star Dust",
+  "item.beemancer.diamond_shard": "Diamond Shard",
+  "item.beemancer.emerald_shard": "Emerald Shard",
+  "item.beemancer.obsidian_shard": "Obsidian Shard",
+  "item.beemancer.ender_pearl_shard": "Ender Pearl Shard",
+  "item.beemancer.netherite_scrap_shard": "Netherite Scrap Shard",
+  "item.beemancer.dragon_breath_shard": "Dragon Breath Shard",
+  "item.beemancer.nether_star_shard": "Nether Star Shard",
   "item.beemancer.royal_honey_crystal": "Royal Honey Crystal",
   "item.beemancer.raw_crystal_shard": "Raw Crystal Shard",
   "item.beemancer.enriched_crystal_shard": "Enriched Crystal Shard",
