--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -155,6 +155,13 @@
   "item.beemancer.netherite_scrap_dust": "Poussière de Débris du Nether",
   "item.beemancer.dragon_breath_dust": "Poussière de Souffle de Dragon",
   "item.beemancer.nether_star_dust": "Poussière d'Étoile du Nether",
+  "item.beemancer.diamond_shard": "Éclat de Diamant",
+  "item.beemancer.emerald_shard": "Éclat d'Émeraude",
+  "item.beemancer.obsidian_shard": "Éclat d'Obsidienne",
+  "item.beemancer.ender_pearl_shard": "Éclat de Perle de l'Ender",
+  "item.beemancer.netherite_scrap_shard": "Éclat de Débris du Nether",
+  "item.beemancer.dragon_breath_shard": "Éclat de Souffle de Dragon",
+  "item.beemancer.nether_star_shard": "Éclat d'Étoile du Nether",
   "item.beemancer.royal_honey_crystal": "Cristal de Miel Royal",
   "item.beemancer.raw_crystal_shard": "Éclat de Cristal Brut",
   "item.beemancer.enriched_crystal_shard": "Éclat de Cristal Enrichi",
