--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -139,6 +139,15 @@
   "item.beemancer.netherite_scrap_fragment": "Netherite Scrap Fragment",
   "item.beemancer.dragon_breath_fragment": "Dragon Breath Fragment",
   "item.beemancer.nether_star_fragment": "Nether Star Fragment",
+  "item.beemancer.raw_copper_fragment": "Raw Copper Fragment",
+  "item.beemancer.raw_iron_fragment": "Raw Iron Fragment",
+  "item.beemancer.raw_gold_fragment": "Raw Gold Fragment",
+  "item.beemancer.lapis_lazuli_fragment": "Lapis Lazuli Fragment",
+  "item.beemancer.quartz_fragment": "Quartz Fragment",
+  "item.beemancer.glowstone_dust_fragment": "Glowstone Dust Fragment",
+  "item.beemancer.slime_ball_fragment": "Slime Ball Fragment",
+  "item.beemancer.magma_cream_fragment": "Magma Cream Fragment",
+  "item.beemancer.ghast_tear_fragment": "Ghast Tear Fragment",
   "item.beemancer.raw_copper_shard": "Raw Copper Shard",
   "item.beemancer.raw_iron_shard": "Raw Iron Shard",
   "item.beemancer.raw_gold_shard": "Raw Gold Shard",
