--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -139,6 +139,15 @@
   "item.beemancer.netherite_scrap_fragment": "Fragment de Débris du Nether",
   "item.beemancer.dragon_breath_fragment": "Fragment de Souffle de Dragon",
   "item.beemancer.nether_star_fragment": "Fragment d'Étoile du Nether",
+  "item.beemancer.raw_copper_fragment": "Fragment de Cuivre Brut",
+  "item.beemancer.raw_iron_fragment": "Fragment de Fer Brut",
+  "item.beemancer.raw_gold_fragment": "Fragment d'Or Brut",
+  "item.beemancer.lapis_lazuli_fragment": "Fragment de Lapis Lazuli",
+  "item.beemancer.quartz_fragment": "Fragment de Quartz",
+  "item.beemancer.glowstone_dust_fragment": "Fragment de Poudre Lumineuse",
+  "item.beemancer.slime_ball_fragment": "Fragment de Slime",
+  "item.beemancer.magma_cream_fragment": "Fragment de Crème de Magma",
+  "item.beemancer.ghast_tear_fragment": "Fragment de Larme de Ghast",
   "item.beemancer.raw_copper_shard": "Éclat de Cuivre Brut",
   "item.beemancer.raw_iron_shard": "Éclat de Fer Brut",
   "item.beemancer.raw_gold_shard": "Éclat d'Or Brut",
