remove bee wand, add hive feedback

--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -8,7 +8,7 @@
   "block.beemancer.storage_terminal": "Storage Terminal",
   "block.beemancer.bee_creator": "Bee Creator",
   "block.beemancer.magic_hive": "Magic Hive",
-  "block.beemancer.breeding_crystal": "Magic Breeding Crystal",
+  "block.beemancer.antibreeding_crystal": "Antibreeding Crystal",
   "block.beemancer.incubator": "Incubator",
   "block.beemancer.manual_centrifuge": "Manual Centrifuge",
   "block.beemancer.powered_centrifuge": "Powered Centrifuge",
@@ -210,19 +210,8 @@
   "item.beemancer.bee_larva": "Bee Larva",
   "item.beemancer.bee_larva.shift_hint": "Hold SHIFT for gene details",
   
-  "item.beemancer.bee_wand": "Bee Wand",
   "item.beemancer.building_wand": "Building Wand",
   "item.beemancer.debug_wand": "Debug Wand",
-  "item.beemancer.bee_wand.has_selection": "Bee selected",
-  "item.beemancer.bee_wand.no_selection_hint": "No bee selected",
-  "item.beemancer.bee_wand.selected": "Bee selected!",
-  "item.beemancer.bee_wand.deselected": "Selection cleared",
-  "item.beemancer.bee_wand.destination_set": "Destination set!",
-  "item.beemancer.bee_wand.bee_lost": "Selected bee no longer exists",
-  "item.beemancer.bee_wand.no_selection": "Select a bee first!",
-  "item.beemancer.bee_wand.usage1": "Right-click bee: Select",
-  "item.beemancer.bee_wand.usage2": "Right-click block: Set destination",
-  "item.beemancer.bee_wand.usage3": "Shift+Right-click air: Clear selection",
   
   "item.beemancer.codex": "Beemancer Codex",
   
@@ -244,8 +233,6 @@
   "codex.beemancer.bee.introduction.desc": "Begin your journey as a Beemancer",
   "codex.beemancer.bee.first_bee.title": "Your First Bee",
   "codex.beemancer.bee.first_bee.desc": "Capture and nurture your first magic bee",
-  "codex.beemancer.bee.bee_wand.title": "The Bee Wand",
-  "codex.beemancer.bee.bee_wand.desc": "Learn to control bees with the magic wand",
   "codex.beemancer.bee.magic_hive.title": "Magic Hive",
   "codex.beemancer.bee.magic_hive.desc": "Build a home for your magical bees",
   "codex.beemancer.bee.breeding.title": "Bee Breeding",
