--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -8,7 +8,7 @@
   "block.beemancer.storage_terminal": "Terminal de Stockage",
   "block.beemancer.bee_creator": "Créateur d'Abeilles",
   "block.beemancer.magic_hive": "Ruche Magique",
-  "block.beemancer.breeding_crystal": "Cristal de Reproduction",
+  "block.beemancer.antibreeding_crystal": "Cristal Anti-reproduction",
   "block.beemancer.incubator": "Incubateur",
   "block.beemancer.manual_centrifuge": "Centrifugeuse Manuelle",
   "block.beemancer.powered_centrifuge": "Centrifugeuse Automatique",
@@ -199,19 +199,8 @@
   "item.beemancer.bee_larva": "Larve d'Abeille",
   "item.beemancer.bee_larva.shift_hint": "Maintenir SHIFT pour les détails des gènes",
   
-  "item.beemancer.bee_wand": "Baguette d'Abeille",
   "item.beemancer.building_wand": "Baguette de Construction",
   "item.beemancer.debug_wand": "Baguette de Debug",
-  "item.beemancer.bee_wand.has_selection": "Abeille sélectionnée",
-  "item.beemancer.bee_wand.no_selection_hint": "Aucune abeille sélectionnée",
-  "item.beemancer.bee_wand.selected": "Abeille sélectionnée !",
-  "item.beemancer.bee_wand.deselected": "Sélection effacée",
-  "item.beemancer.bee_wand.destination_set": "Destination définie !",
-  "item.beemancer.bee_wand.bee_lost": "L'abeille sélectionnée n'existe plus",
-  "item.beemancer.bee_wand.no_selection": "Sélectionnez d'abord une abeille !",
-  "item.beemancer.bee_wand.usage1": "Clic droit abeille: Sélectionner",
-  "item.beemancer.bee_wand.usage2": "Clic droit bloc: Définir destination",
-  "item.beemancer.bee_wand.usage3": "Shift+Clic droit air: Effacer sélection",
   
   "item.beemancer.codex": "Codex Beemancer",
   
@@ -232,8 +221,6 @@
   "codex.beemancer.bee.introduction.desc": "Commencez votre voyage en tant que Beemancer",
   "codex.beemancer.bee.first_bee.title": "Votre Première Abeille",
   "codex.beemancer.bee.first_bee.desc": "Capturez et élevez votre première abeille magique",
-  "codex.beemancer.bee.bee_wand.title": "La Baguette d'Abeille",
-  "codex.beemancer.bee.bee_wand.desc": "Apprenez à contrôler les abeilles avec la baguette",
   "codex.beemancer.bee.magic_hive.title": "Ruche Magique",
   "codex.beemancer.bee.magic_hive.desc": "Construisez un foyer pour vos abeilles magiques",
   "codex.beemancer.bee.breeding.title": "Reproduction",
