--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -201,6 +201,10 @@
   "tooltip.beemancer.activity.diurnal": "Diurnal",
   "tooltip.beemancer.activity.nocturnal": "Nocturnal",
   "tooltip.beemancer.activity.insomniac": "Insomniac",
+  "tooltip.beemancer.flower": "Flower",
+  "tooltip.beemancer.flower.flower": "Flowers",
+  "tooltip.beemancer.flower.mushroom": "Mushrooms",
+  "tooltip.beemancer.flower.crystal": "Crystals",
   "tooltip.beemancer.drop": "Drop",
   "tooltip.beemancer.flyspeed": "Fly Speed",
   "tooltip.beemancer.foraging": "Foraging",
